--- a/http-servers/index.html
+++ b/http-servers/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <h2>hello html world</h2>
+<h2>{message}</h2>
 </body>
 </html>
